metadata-classic/objects/QualityAnalysis__c.object
<CustomObject>
    <description>Custom object to store data records pertaining to quality analysis for customer/professional agent interactions.</description>
    <fields>
        <fullName>AccurateSolution__c</fullName>
        <description>Used for CE business level evaluations.  Was our solution accurate?</description>
        <inlineHelpText>Was our solution accurate?</inlineHelpText>
        <label>Accurate Solution</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AdvocacyComments__c</fullName>
        <description>Comments for how we act in the customer/pro&apos;s best interest by taking ownership of their concern and ensuring their issue is resolved completely and correctly the first time.</description>
        <inlineHelpText>Comments for how we act in the customer/pro&apos;s best interest by taking ownership of their concern and ensuring their issue is resolved completely and correctly the first time.</inlineHelpText>
        <label>Advocacy Comments</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AdvocacyPoints__c</fullName>
        <description>The number of points earned by the specialist for the Advocacy question.</description>
        <inlineHelpText>The number of points earned by the specialist for the Advocacy question.</inlineHelpText>
        <label>Advocacy Points</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AdvocacyWeightedScore__c</fullName>
        <description>Calculated weighted score of advocacy rating.</description>
        <formula>CASE( 
Advocacy__c, 
&quot;1&quot;, 0.000, 
&quot;2&quot;, 1.618,
&quot;3&quot;, 1.887,
&quot;4&quot;, 2.292,
&quot;5&quot;, 2.696
,NULL)</formula>
        <label>Advocacy Weighted Score</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Advocacy__c</fullName>
        <description>We act in the customer/pro&apos;s best interest by taking ownership of their concern and ensuring their issue is resolved completely and correctly the first time.</description>
        <inlineHelpText>We act in the customer/pro&apos;s best interest by taking ownership of their concern and ensuring their issue is resolved completely and correctly the first time.</inlineHelpText>
        <label>Advocacy</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>Emerging</fullName>
                </value>
                <value>
                    <fullName>Advancing</fullName>
                </value>
                <value>
                    <fullName>Obsessing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Agent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The agent who is the subject of the QA.</description>
        <inlineHelpText>The agent who is the subject of the QA.</inlineHelpText>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>QAs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AppropriateEscalationComments__c</fullName>
        <label>Appropriate Escalation Comments</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AppropriateEscalationPoints__c</fullName>
        <description>The points earned by the specialist for the Appropriate Escalation question.</description>
        <inlineHelpText>The points earned by the specialist for the Appropriate Escalation question.</inlineHelpText>
        <label>Appropriate Escalation Points</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AppropriateEscalation__c</fullName>
        <description>Picklist field to indicate if the case was escalated appropriately.</description>
        <inlineHelpText>Did the specialist escalate the case appropriately?</inlineHelpText>
        <label>Appropriate Escalation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AppropriateMacroComments__c</fullName>
        <label>Appropriate Macro Comments</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AppropriateMacroPoints__c</fullName>
        <description>The points earned by the specialist for the Appropriate Macro question.</description>
        <inlineHelpText>The points earned by the specialist for the Appropriate Macro question.</inlineHelpText>
        <label>Appropriate Macro Points</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AppropriateMacro__c</fullName>
        <inlineHelpText>Did the specialist select the most appropriate macro to address the immediate issue?</inlineHelpText>
        <label>Appropriate Macro</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AvoidabbreviationsandTTJargon__c</fullName>
        <description>We refrain from abbreviations and TT jargon *</description>
        <inlineHelpText>We refrain from abbreviations and TT jargon *</inlineHelpText>
        <label>Avoid abbreviations and TT Jargon</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BlameAvoidanceComments__c</fullName>
        <label>Blame Avoidance Comments</label>
        <length>100000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BlameAvoidancePoints__c</fullName>
        <label>Blame Avoidance Points</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BlameAvoidance__c</fullName>
        <label>Blame Avoidance</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BrandAmbassadorComments__c</fullName>
        <description>Comments about the &quot;Were we a brand ambassador&quot; competency.</description>
        <inlineHelpText>Comments about the &quot;Were we a brand ambassador&quot; competency.</inlineHelpText>
        <label>Brand Ambassador Comments</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BrandAmbassadorPoints__c</fullName>
        <description>The points earned by the specialist for the Brand Ambassador competency.</description>
        <inlineHelpText>The points earned by the specialist for the Brand Ambassador competency.</inlineHelpText>
        <label>Brand Ambassador Points</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BrandAmbassador__c</fullName>
        <description>We exercise approved Thumbtack style.</description>
        <inlineHelpText>We exercise approved Thumbtack style.</inlineHelpText>
        <label>Brand Ambassador</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BugsAndFeedbackComments__c</fullName>
        <label>Bugs and Feedback Comments</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BugsAndFeedbackPoints__c</fullName>
        <description>The points earned by the specialist for the Bugs and Feedback question.</description>
        <inlineHelpText>The points earned by the specialist for the Bugs and Feedback question.</inlineHelpText>
        <label>Bugs and Feedback Points</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BugsAndFeedback__c</fullName>
        <inlineHelpText>Did the specialist escalate bugs and product feedback correctly?</inlineHelpText>
        <label>Bugs and Feedback</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BusinessCriticalScoreEmailT13__c</fullName>
        <description>Calculated Business Critical overall score.</description>
        <formula>CASE( 
ProcessAdherence__c , 
&quot;Yes&quot;, 0.334, 
&quot;No&quot;, 0.000
,NULL)
+
CASE( 
CaseManagement__c , 
&quot;Yes&quot;, 0.333, 
&quot;No&quot;, 0.000
,NULL)
+
CASE( 
Documentation__c , 
&quot;Yes&quot;, 0.333, 
&quot;No&quot;, 0.000
,NULL)</formula>
        <label>Business Critical Score (Email T1-3)</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BusinessCriticalSectionPointsEarned__c</fullName>
        <description>The total number of points earned by the specialist for the questions in the Business Critical section.</description>
        <inlineHelpText>The total number of points earned by the specialist for the questions in the Business Critical section.</inlineHelpText>
        <label>Business Critical Section Points Earned</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BusinessCriticalSectionScore__c</fullName>
        <formula>CASE( 
ProcessAdherence__c , 
&quot;Yes&quot;, 0.667, 
&quot;No&quot;, 0.000
,NULL)
+
CASE( 
CaseManagement__c , 
&quot;Yes&quot;, 0.667, 
&quot;No&quot;, 0.000
,NULL)
+
CASE( 
Documentation__c , 
&quot;Yes&quot;, 0.666, 
&quot;No&quot;, 0.000
,NULL)</formula>
        <label>Business Critical Section Score</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BusinessCritical__c</fullName>
        <description>Calculated Business Critical overall percentage.</description>
        <formula>(ProcessAdherenceWeightedScore__c + CaseManagementWeightedScore__c +  DocumentationWeightedScore__c)/2</formula>
        <label>Business Critical</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CSATOpportunity__c</fullName>
        <description>Quality analysis performed due to a CSAT opportunity.</description>
        <inlineHelpText>Marked true if the quality analysis performed due to a CSAT opportunity.</inlineHelpText>
        <label>CSAT Opportunity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CalibrationOpportunity__c</fullName>
        <description>Field to indicate if the QA is for a calibration opportunity.</description>
        <label>Calibration Opportunity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CallManagementComments__c</fullName>
        <inlineHelpText>Comments about the call management competency.</inlineHelpText>
        <label>Call Management Comments</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CallManagementPoints__c</fullName>
        <label>Call Management Points</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CallManagementSectionNotes__c</fullName>
        <label>Call Management Section Notes</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CallManagementSectionPoints__c</fullName>
        <label>Call Management Section Points</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CallManagement__c</fullName>
        <description>We maintain control of the call so we can help the pro/customer as effectively as possible.</description>
        <inlineHelpText>We maintain control of the call so we can help the pro/customer as effectively as possible.</inlineHelpText>
        <label>Call Management</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Emerging</fullName>
                </value>
                <value>
                    <fullName>Advancing</fullName>
                </value>
                <value>
                    <fullName>Obsessing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CaringComments__c</fullName>
        <description>Comments about the Caring competency.</description>
        <inlineHelpText>Comments about the Caring competency.</inlineHelpText>
        <label>Caring Comments</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CaringPoints__c</fullName>
        <description>The points earned by the specialist for the Caring competency.</description>
        <inlineHelpText>The points earned by the specialist for the Caring competency.</inlineHelpText>
        <label>Caring Points</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Caring__c</fullName>
        <description>Could be any one (or more) of the following...
- We show genuine interest in resolving the stated concern
- We demonstrate tailored empathy  
- We vocalize our support or encouragement</description>
        <inlineHelpText>Could be any one (or more) of the following...
- We show genuine interest in resolving the stated concern
- We demonstrate tailored empathy  
- We vocalize our support or encouragement</inlineHelpText>
        <label>Caring</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CaseManagementComments__c</fullName>
        <description>Comments about Case Management Question.</description>
        <inlineHelpText>Comments about Case Management Question.</inlineHelpText>
        <label>Case Management Comments</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CaseManagementPoints__c</fullName>
        <description>The points earned by the specialist for the Case Management question.</description>
        <inlineHelpText>The points earned by the specialist for the Case Management question.</inlineHelpText>
        <label>Case Management Points</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CaseManagementWeightedScore__c</fullName>
        <description>Calculated fields for case management question.</description>
        <formula>CASE( 
CaseManagement__c , 
&quot;No&quot;, 0.000, 
&quot;Yes&quot;, 0.66667
,NULL)</formula>
        <label>Case Management Weighted Score</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CaseManagement__c</fullName>
        <description>- We ensure a unique case is created for each customer issue
- We attach cases to the correct Contacts (if applicable)
- We create a new Contact when one is not already created</description>
        <inlineHelpText>- We ensure a unique case is created for each customer issue
- We attach cases to the correct Contacts (if applicable)
- We create a new Contact when one is not already created</inlineHelpText>
        <label>Case Management</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The case this QA form is related to.</description>
        <inlineHelpText>The case this QA form is related to.</inlineHelpText>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipName>QAs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CategorizationComments__c</fullName>
        <label>Categorization Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CategorizationPoints__c</fullName>
        <label>Categorization Points</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Categorization__c</fullName>
        <label>Categorization</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ClarityComments__c</fullName>
        <label>Clarity Comments</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Clarity__c</fullName>
        <description>It was clear to the user on what we were going to do and what they needed to do at every point of the Incident. Thumbtack’s role in dispute resolution was explained and understood by the user. We follow through on promises made.</description>
        <inlineHelpText>It was clear to the user on what we were going to do and what they needed to do at every point of the Incident. Thumbtack’s role in dispute resolution was explained and understood by the user. We follow through on promises made.</inlineHelpText>
        <label>Clarity</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Emerging</fullName>
                </value>
                <value>
                    <fullName>Advancing</fullName>
                </value>
                <value>
                    <fullName>Obsessing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ClosetheCallComments__c</fullName>
        <label>Close the Call Comments</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ClosetheCall__c</fullName>
        <description>* Offer to answer any new questions
* Leave them feeling warm and fuzzy
* Thank them for calling Thumbtack</description>
        <inlineHelpText>* Offer to answer any new questions
* Leave them feeling warm and fuzzy
* Thank them for calling Thumbtack</inlineHelpText>
        <label>Close the Call</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CommunicationComments__c</fullName>
        <inlineHelpText>Comments about the communication competency.</inlineHelpText>
        <label>Communication Comments</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CommunicationDisconnected__c</fullName>
        <description>Business level evaluation question; was the chat/text/call disconnected?</description>
        <inlineHelpText>Was the chat/text/call disconnected?</inlineHelpText>
        <label>Communication Disconnected</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CommunicationGuidelinesT13Comments__c</fullName>
        <label>Communication Guidelines (T1-3) Comments</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CommunicationGuidelinesT13Points__c</fullName>
        <description>The points earned by the specialist for the Communication Guidelines (T1-3) question.</description>
        <inlineHelpText>The points earned by the specialist for the Communication Guidelines (T1-3) question.</inlineHelpText>
        <label>Communication Guidelines (T1-3) Points</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CommunicationGuidelinesT13__c</fullName>
        <inlineHelpText>Did the specialist follow the appropriate Thumbtack support communication guidelines?</inlineHelpText>
        <label>Communication Guidelines (T1-3)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CommunicationPoints__c</fullName>
        <description>The number of points earned by the specialist for the Communication question.</description>
        <inlineHelpText>The number of points earned by the specialist for the Communication question.</inlineHelpText>
        <label>Communication Points</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Communication__c</fullName>
        <inlineHelpText>We write clearly and succinctly so our resolution is clear.</inlineHelpText>
        <label>Communication</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>Emerging</fullName>
                </value>
                <value>
                    <fullName>Advancing</fullName>
                </value>
                <value>
                    <fullName>Obsessing</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CompleteSolutionComments__c</fullName>
        <label>Complete Solution Comments</label>
        <length>60000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CompleteSolutionPoints__c</fullName>
        <label>Complete Solution Points</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CompleteSolution__c</fullName>
        <label>Complete Solution</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ComplianceCriticalSectionPointsEarned__c</fullName>
        <description>The total number of points earned by the specialist for the questions in the Compliance Critical section.</description>
        <inlineHelpText>The total number of points earned by the specialist for the questions in the Compliance Critical section.</inlineHelpText>
        <label>Compliance Critical Section Points Earne</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ComplianceCriticalSectionScore__c</fullName>
        <description>Total calculated Compliance Critical percentage.</description>
        <formula>CASE( 
RecordingDisclaimer__c , 
&quot;Yes&quot;, 0.000, 
&quot;No&quot;, -2.000
,0.000)

+

CASE( 
 Verification__c, 
&quot;Yes&quot;, 0.000, 
&quot;No&quot;, -2.000
,0.000)

+

CASE( 
PersonalInformationManagement__c, 
&quot;Yes&quot;, 0.000, 
&quot;No&quot;, -2.000
,0.000)</formula>
        <label>Compliance Critical Section Score</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Compliance_Critical__c</fullName>
        <description>Total calculated Compliance Critical percentage.</description>
        <formula>(RecordingDisclaimerWeightedScore__c + VerificationWeightedScore__c  +  PersonalInformationWeightedScore__c)/10</formula>
        <label>Compliance Critical</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ConfidenceComments__c</fullName>
        <description>Comments about how the specialist performed on the Confidence competency.</description>
        <inlineHelpText>Comments about how the specialist performed on the Confidence competency.</inlineHelpText>
        <label>Confidence Comments</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ConfidencePoints__c</fullName>
        <description>The points earned by the specialist for the Confidence competency.</description>
        <inlineHelpText>The points earned by the specialist for the Confidence competency.</inlineHelpText>
        <label>Confidence Points</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Confidence__c</fullName>
        <description>- We avoid words of uncertainty, and sound approachable and humble. (e.g., &quot;I think&quot;, &quot;It should&quot;)</description>
        <inlineHelpText>- We avoid words of uncertainty, and sound approachable and humble. (e.g., &quot;I think&quot;, &quot;It should&quot;)</inlineHelpText>
        <label>Confidence</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ConsoleDetailLink__c</fullName>
        <formula>HYPERLINK(&quot;https://thumbtack.my.salesforce.com/console#%2F&quot;&amp;Id,&quot;Console Detail Link&quot;)</formula>
        <label>Console Detail Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactedTTBefore__c</fullName>
        <description>Business level evaluation question; Have they contacted us before?</description>
        <inlineHelpText>Have they contacted us before?</inlineHelpText>
        <label>Contacted TT Before</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CouldBeBetter__c</fullName>
        <description>#CBBs for the interaction</description>
        <inlineHelpText>#CBBs for the interaction</inlineHelpText>
        <label>#CouldBeBetter</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CreatedDateTime__c</fullName>
        <description>Formula field to bring over the time and date of the creation of the QA record.  Used in reporting.</description>
        <formula>CreatedDate</formula>
        <label>Created Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CreditsGiven__c</fullName>
        <description>Business level evaluation question; did we give extra credits?</description>
        <inlineHelpText>Did we give extra credits?</inlineHelpText>
        <label>Credits Given</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CustomerCriticalScoreChat__c</fullName>
        <formula>IF( RecordType.DeveloperName = &apos;ChatSupportQA&apos;, 
(
CASE( Advocacy__c, 
&quot;1&quot;, 0.000, 
&quot;2&quot;, 1.000, 
&quot;3&quot;, 1.100, 
&quot;4&quot;, 1.400, 
&quot;5&quot;, 1.600 
,NULL) 

+

CASE( Communication__c, 
&quot;1&quot;, 0.000, 
&quot;2&quot;, 1.200, 
&quot;3&quot;, 1.400, 
&quot;4&quot;, 1.700, 
&quot;5&quot;, 2.000 
,NULL)

+ 

CASE( 
Discovery__c , 
&quot;1&quot;, 0.000, 
&quot;2&quot;, 1.000, 
&quot;3&quot;, 1.100, 
&quot;4&quot;, 1.400, 
&quot;5&quot;, 1.600 
,NULL) 

+ 

CASE( 
ThumbtackKnowledge__c , 
&quot;1&quot;, 0.000, 
&quot;2&quot;, 0.700, 
&quot;3&quot;, 0.800, 
&quot;4&quot;, 1.000, 
&quot;5&quot;, 1.200 
,NULL) 

+ 

CASE( 
FutureGuidance__c , 
&quot;1&quot;, 0.000, 
&quot;2&quot;, 0.500, 
&quot;3&quot;, 0.600, 
&quot;4&quot;, 0.700, 
&quot;5&quot;, 0.800 
,NULL) 

+ 

CASE( 
PositiveLanguage__c , 
&quot;1&quot;, 0.000, 
&quot;2&quot;, 0.500, 
&quot;3&quot;, 0.600, 
&quot;4&quot;, 0.700, 
&quot;5&quot;, 0.800 
,NULL)
),0.000)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Critical Score (Chat)</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
</CustomObject>